Enable to set status code and response message